# VirtualVoid

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
examples/: errors.vvasm  test.vvasm
include/asm/: Assembler.h  directive.def  directive.h
include/core/: InstructionSet.h  instruction_set.def  instruction_set.h
src/asm/: Assembler.cpp  main.cpp
src/vm/: main.cpp
